--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.0.0",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/server": "^11.11.0",
@@ -18,18 +19,13 @@
     "@mui/material-nextjs": "^5.15.11",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-data-grid": "^7.3.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/themes": "^3.0.2",
-    "bcrypt": "^5.1.1",
+    "@prisma/client": "^5.13.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.0.2",
-    "ldrs": "^1.0.1",
     "lucide-react": "^0.373.0",
-    "mongodb": "^6.5.0",
-    "mongoose": "^8.3.1",
     "next": "14.1.4",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.17",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.8",
@@ -44,6 +40,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
