--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "^5.13.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.2",
     "lucide-react": "^0.373.0",
     "next": "14.1.4",
@@ -29,6 +30,7 @@
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.8",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
