--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.0.0",
+    "@date-io/date-fns": "^3.0.0",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/server": "^11.11.0",
@@ -19,6 +20,7 @@
     "@mui/material-nextjs": "^5.15.11",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-data-grid": "^7.3.0",
+    "@mui/x-date-pickers": "^7.3.2",
     "@prisma/client": "^5.13.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
